[gd_scene load_steps=30 format=2]

[ext_resource path="res://Assets/UI/Scripts/NewGameUI.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/Images/Background/book.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/Fonts/TitleFontCapitalize.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/UI/Scenes/Separator.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/UI/Scripts/GameTypeButtons.gd" type="Script" id=5]
[ext_resource path="res://Assets/UI/Scenes/GameTypeButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/UI/Fonts/SmallFontItalic.tres" type="DynamicFont" id=7]
[ext_resource path="res://Assets/UI/Scripts/ColorSelection.gd" type="Script" id=8]
[ext_resource path="res://Assets/UI/Images/Background/MainMenu/selected_color_border.png" type="Texture" id=9]
[ext_resource path="res://External/Fonts/LinLibertineBI.tres" type="DynamicFontData" id=10]
[ext_resource path="res://Assets/UI/Images/Buttons/close.png" type="Texture" id=11]
[ext_resource path="res://Assets/UI/Images/Buttons/close_h.png" type="Texture" id=12]
[ext_resource path="res://Assets/UI/Scripts/MapList.gd" type="Script" id=13]
[ext_resource path="res://Assets/UI/Fonts/SmallFontBoldItalic.tres" type="DynamicFont" id=14]
[ext_resource path="res://Assets/UI/Images/Logos/uh_no_text.svg" type="Texture" id=15]
[ext_resource path="res://Assets/UI/Images/Buttons/ok.png" type="Texture" id=16]
[ext_resource path="res://Assets/UI/Images/Buttons/ok_h.png" type="Texture" id=17]

[sub_resource type="Theme" id=1]
CheckBox/colors/font_color = Color( 0.136719, 0.0924921, 0.0299072, 1 )
CheckBox/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
CheckBox/colors/font_color_hover = Color( 0.136719, 0.0924921, 0.0299072, 1 )
CheckBox/colors/font_color_pressed = Color( 0.136719, 0.0924921, 0.0299072, 1 )
CheckBox/constants/check_vadjust = 0
CheckBox/constants/hseparation = 4
CheckBox/fonts/font = null
CheckBox/icons/checked = null
CheckBox/icons/radio_checked = null
CheckBox/icons/radio_unchecked = null
CheckBox/icons/unchecked = null
CheckBox/styles/disabled = null
CheckBox/styles/focus = null
CheckBox/styles/hover = null
CheckBox/styles/normal = null
CheckBox/styles/pressed = null
Label/colors/Label = Color( 0.136719, 0.0924921, 0.0299072, 1 )
Label/colors/font_color = Color( 0.133333, 0.0901961, 0.027451, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = null
Label/styles/normal = null

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 4.0
bg_color = Color( 1, 1, 1, 0.227451 )
border_width_left = 2
border_width_top = 4
border_width_right = 4
border_width_bottom = 3
border_color = Color( 0.258824, 0.188235, 0.0509804, 1 )
border_blend = true
corner_radius_top_right = 5
corner_radius_bottom_right = 25

[sub_resource type="StyleBoxLine" id=3]
thickness = 0

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 4.0
content_margin_right = 10.0
bg_color = Color( 1, 1, 1, 0.227451 )
border_width_left = 2
border_width_top = 4
border_width_right = 4
border_width_bottom = 3
border_color = Color( 0.258824, 0.188235, 0.0509804, 1 )
border_blend = true
corner_radius_top_right = 5
corner_radius_bottom_right = 25

[sub_resource type="GDScript" id=5]
script/source = "extends LineEdit

func _ready() -> void:
	text = Global.player_name

func _on_PlayerName_focus_exited() -> void:
	Global.player_name = text
"

[sub_resource type="GDScript" id=6]
script/source = "extends ColorRect

export(int) var color_to_faction
"

[sub_resource type="GDScript" id=7]
script/source = "extends HSlider

func _ready() -> void:
	value = Global.ai_players

func _on_AISlider_value_changed(value: int) -> void:
	Global.ai_players = value
"

[sub_resource type="DynamicFont" id=8]
size = 18
use_filter = true
extra_spacing_top = -5
extra_spacing_char = 21
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 1, 1, 1, 0.227451 )
border_width_left = 1
border_width_top = 4
border_width_right = 4
border_width_bottom = 3
border_color = Color( 0.258824, 0.188235, 0.0509804, 1 )
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id=10]
content_margin_left = 5.0
content_margin_right = 5.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 1
border_width_right = 2
border_width_bottom = 1
border_color = Color( 0.345098, 0.278431, 0.14902, 1 )
border_blend = true

[sub_resource type="GDScript" id=11]
script/source = "extends HBoxContainer

func _on_ResourceDensitySlider_value_changed(value):
	$ResourceDensityIndicator.text = \"{0}x\".format([value])
"

[sub_resource type="GDScript" id=12]
script/source = "extends HBoxContainer

onready var traders = $Traders
onready var pirates = $Pirates
onready var disasters = $Disasters

func _ready():
	traders.pressed = Global.has_traders
	pirates.pressed = Global.has_pirates
	disasters.pressed = Global.has_disasters

func _on_Traders_pressed():
	Global.has_traders = traders.pressed

func _on_Pirates_pressed():
	Global.has_pirates = pirates.pressed

func _on_Disasters_pressed():
	Global.has_disasters = disasters.pressed
"

[node name="NewGameUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="Book" type="TextureRect" parent="CenterContainer"]
margin_left = 400.0
margin_top = 160.0
margin_right = 1200.0
margin_bottom = 740.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Book"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 90
custom_constants/margin_top = 50
custom_constants/margin_left = 90
custom_constants/margin_bottom = 40
__meta__ = {
"_edit_lock_": true
}

[node name="Pages" type="HBoxContainer" parent="CenterContainer/Book/MarginContainer"]
margin_left = 90.0
margin_top = 50.0
margin_right = 710.0
margin_bottom = 540.0
rect_min_size = Vector2( 620, 0 )
size_flags_horizontal = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Left" type="VBoxContainer" parent="CenterContainer/Book/MarginContainer/Pages"]
margin_right = 286.0
margin_bottom = 490.0
size_flags_horizontal = 2
size_flags_vertical = 3

[node name="Title" type="Label" parent="CenterContainer/Book/MarginContainer/Pages/Left"]
margin_right = 286.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.180392, 0.141176, 0.0784314, 1 )
custom_colors/font_color_shadow = Color( 0.901961, 0.901961, 0.901961, 1 )
custom_constants/shadow_offset_x = -2
custom_constants/shadow_offset_y = -1
text = "New Game - Singleplayer"
align = 1

[node name="Separator1" parent="CenterContainer/Book/MarginContainer/Pages/Left" instance=ExtResource( 4 )]
margin_top = 25.0
margin_right = 286.0
margin_bottom = 33.0

[node name="GameTypeButtons" type="MarginContainer" parent="CenterContainer/Book/MarginContainer/Pages/Left"]
margin_top = 37.0
margin_right = 286.0
margin_bottom = 130.0
custom_constants/margin_top = 10
custom_constants/margin_left = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Book/MarginContainer/Pages/Left/GameTypeButtons"]
margin_left = 20.0
margin_top = 10.0
margin_right = 286.0
margin_bottom = 93.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 5 )

[node name="Scenario" parent="CenterContainer/Book/MarginContainer/Pages/Left/GameTypeButtons/VBoxContainer" instance=ExtResource( 6 )]
margin_right = 266.0
margin_bottom = 25.0
type = "Scenario"

[node name="RandomMap" parent="CenterContainer/Book/MarginContainer/Pages/Left/GameTypeButtons/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 29.0
margin_right = 266.0
margin_bottom = 54.0
type = "Random map"

[node name="FreePlay" parent="CenterContainer/Book/MarginContainer/Pages/Left/GameTypeButtons/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 58.0
margin_right = 266.0
margin_bottom = 83.0
type = "Free play"

[node name="Separator2" parent="CenterContainer/Book/MarginContainer/Pages/Left" instance=ExtResource( 4 )]
margin_top = 134.0
margin_right = 286.0
margin_bottom = 142.0

[node name="NameSelection" type="HBoxContainer" parent="CenterContainer/Book/MarginContainer/Pages/Left"]
margin_top = 146.0
margin_right = 286.0
margin_bottom = 186.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3

[node name="Label" type="Label" parent="CenterContainer/Book/MarginContainer/Pages/Left/NameSelection"]
margin_right = 100.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
size_flags_vertical = 2
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.258824, 0.188235, 0.0509804, 1 )
text = "Player Name:"
valign = 1

[node name="PlayerName" type="LineEdit" parent="CenterContainer/Book/MarginContainer/Pages/Left/NameSelection"]
margin_left = 104.0
margin_right = 286.0
margin_bottom = 30.0
rect_min_size = Vector2( 182, 30 )
size_flags_horizontal = 3
size_flags_vertical = 2
custom_styles/read_only = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 7 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.258824, 0.188235, 0.0509804, 1 )
text = "Unknown Traveller"
caret_blink = true
script = SubResource( 5 )

[node name="ColorSelection" type="HBoxContainer" parent="CenterContainer/Book/MarginContainer/Pages/Left"]
margin_top = 190.0
margin_right = 286.0
margin_bottom = 260.0
rect_min_size = Vector2( 0, 70 )
script = ExtResource( 8 )

[node name="Label" type="Label" parent="CenterContainer/Book/MarginContainer/Pages/Left/ColorSelection"]
margin_right = 111.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.258824, 0.188235, 0.0509804, 1 )
text = "Color:"

[node name="TextureRect" type="TextureRect" parent="CenterContainer/Book/MarginContainer/Pages/Left/ColorSelection"]
margin_left = 115.0
margin_right = 171.0
margin_bottom = 56.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 9 )

[node name="SelectedColor" type="ColorRect" parent="CenterContainer/Book/MarginContainer/Pages/Left/ColorSelection/TextureRect"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -27.0
margin_top = -27.0
margin_right = 25.0
margin_bottom = 25.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 0
size_flags_vertical = 0
color = Color( 1, 0.0392157, 0.0392157, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Choices" type="GridContainer" parent="CenterContainer/Book/MarginContainer/Pages/Left/ColorSelection"]
margin_left = 175.0
margin_right = 286.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_constants/vseparation = 4
custom_constants/hseparation = 0
columns = 5

[node name="Red" type="ColorRect" parent="CenterContainer/Book/MarginContainer/Pages/Left/ColorSelection/Choices"]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
color = Color( 1, 0.0392157, 0.0392157, 1 )
script = SubResource( 6 )
color_to_faction = 1

[node name="Blue" type="ColorRect" parent="CenterContainer/Book/MarginContainer/Pages/Left/ColorSelection/Choices"]
margin_left = 20.0
margin_right = 40.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
color = Color( 0, 0.282353, 0.709804, 1 )
script = SubResource( 6 )
color_to_faction = 2

[node name="Green" type="ColorRect" parent="CenterContainer/Book/MarginContainer/Pages/Left/ColorSelection/Choices"]
margin_left = 40.0
margin_right = 60.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
color = Color( 0, 0.627451, 0.0901961, 1 )
script = SubResource( 6 )
color_to_faction = 3

[node name="Orange" type="ColorRect" parent="CenterContainer/Book/MarginContainer/Pages/Left/ColorSelection/Choices"]
margin_left = 60.0
margin_right = 80.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
color = Color( 0.878431, 0.4, 0, 1 )
script = SubResource( 6 )
color_to_faction = 4

[node name="Purple" type="ColorRect" parent="CenterContainer/Book/MarginContainer/Pages/Left/ColorSelection/Choices"]
margin_left = 80.0
margin_right = 100.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
color = Color( 0.501961, 0, 0.501961, 1 )
script = SubResource( 6 )
color_to_faction = 5

[node name="Cyan" type="ColorRect" parent="CenterContainer/Book/MarginContainer/Pages/Left/ColorSelection/Choices"]
margin_top = 24.0
margin_right = 20.0
margin_bottom = 44.0
rect_min_size = Vector2( 20, 20 )
color = Color( 0, 1, 1, 1 )
script = SubResource( 6 )
color_to_faction = 6

[node name="Yellow" type="ColorRect" parent="CenterContainer/Book/MarginContainer/Pages/Left/ColorSelection/Choices"]
margin_left = 20.0
margin_top = 24.0
margin_right = 40.0
margin_bottom = 44.0
rect_min_size = Vector2( 20, 20 )
color = Color( 1, 0.843137, 0, 1 )
script = SubResource( 6 )
color_to_faction = 7

[node name="Pink" type="ColorRect" parent="CenterContainer/Book/MarginContainer/Pages/Left/ColorSelection/Choices"]
margin_left = 40.0
margin_top = 24.0
margin_right = 60.0
margin_bottom = 44.0
rect_min_size = Vector2( 20, 20 )
color = Color( 1, 0, 1, 1 )
script = SubResource( 6 )
color_to_faction = 8

[node name="Teal" type="ColorRect" parent="CenterContainer/Book/MarginContainer/Pages/Left/ColorSelection/Choices"]
margin_left = 60.0
margin_top = 24.0
margin_right = 80.0
margin_bottom = 44.0
rect_min_size = Vector2( 20, 20 )
color = Color( 0, 0.572549, 0.545098, 1 )
script = SubResource( 6 )
color_to_faction = 9

[node name="Lemon" type="ColorRect" parent="CenterContainer/Book/MarginContainer/Pages/Left/ColorSelection/Choices"]
margin_left = 80.0
margin_top = 24.0
margin_right = 100.0
margin_bottom = 44.0
rect_min_size = Vector2( 20, 20 )
color = Color( 0, 1, 0, 1 )
script = SubResource( 6 )
color_to_faction = 10

[node name="Bordeaux" type="ColorRect" parent="CenterContainer/Book/MarginContainer/Pages/Left/ColorSelection/Choices"]
margin_top = 48.0
margin_right = 20.0
margin_bottom = 68.0
rect_min_size = Vector2( 20, 20 )
color = Color( 0.588235, 0.0235294, 0.156863, 1 )
script = SubResource( 6 )
color_to_faction = 11

[node name="White" type="ColorRect" parent="CenterContainer/Book/MarginContainer/Pages/Left/ColorSelection/Choices"]
margin_left = 20.0
margin_top = 48.0
margin_right = 40.0
margin_bottom = 68.0
rect_min_size = Vector2( 20, 20 )
script = SubResource( 6 )
color_to_faction = 12

[node name="Gray" type="ColorRect" parent="CenterContainer/Book/MarginContainer/Pages/Left/ColorSelection/Choices"]
margin_left = 40.0
margin_top = 48.0
margin_right = 60.0
margin_bottom = 68.0
rect_min_size = Vector2( 20, 20 )
color = Color( 0.501961, 0.501961, 0.501961, 1 )
script = SubResource( 6 )
color_to_faction = 13

[node name="Black" type="ColorRect" parent="CenterContainer/Book/MarginContainer/Pages/Left/ColorSelection/Choices"]
margin_left = 60.0
margin_top = 48.0
margin_right = 80.0
margin_bottom = 68.0
rect_min_size = Vector2( 20, 20 )
color = Color( 0, 0, 0, 1 )
script = SubResource( 6 )
color_to_faction = 14

[node name="Separator3" parent="CenterContainer/Book/MarginContainer/Pages/Left" instance=ExtResource( 4 )]
margin_top = 264.0
margin_right = 286.0
margin_bottom = 272.0

[node name="AIPlayerSelection" type="HBoxContainer" parent="CenterContainer/Book/MarginContainer/Pages/Left"]
margin_top = 276.0
margin_right = 286.0
margin_bottom = 313.0
size_flags_horizontal = 3
size_flags_vertical = 2

[node name="Label" type="Label" parent="CenterContainer/Book/MarginContainer/Pages/Left/AIPlayerSelection"]
margin_top = 10.0
margin_right = 61.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.258824, 0.188235, 0.0509804, 1 )
text = "AI players:"

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Book/MarginContainer/Pages/Left/AIPlayerSelection"]
margin_left = 65.0
margin_right = 286.0
margin_bottom = 37.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/Book/MarginContainer/Pages/Left/AIPlayerSelection/VBoxContainer"]
margin_right = 221.0
margin_bottom = 16.0

[node name="AISlider" type="HSlider" parent="CenterContainer/Book/MarginContainer/Pages/Left/AIPlayerSelection/VBoxContainer/HBoxContainer"]
margin_right = 217.03
margin_bottom = 16.0
rect_min_size = Vector2( 217.03, 0 )
size_flags_vertical = 3
max_value = 7.0
value = 3.0
tick_count = 8
ticks_on_borders = true
script = SubResource( 7 )

[node name="Label" type="Label" parent="CenterContainer/Book/MarginContainer/Pages/Left/AIPlayerSelection/VBoxContainer"]
margin_top = 20.0
margin_right = 221.15
margin_bottom = 37.0
rect_min_size = Vector2( 221.15, 0 )
size_flags_horizontal = 0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.258824, 0.188235, 0.0509804, 1 )
text = "01234567"

[node name="BackToMenuButton" type="TextureButton" parent="CenterContainer/Book/MarginContainer/Pages/Left"]
margin_top = 450.0
margin_right = 34.0
margin_bottom = 490.0
hint_tooltip = "Return to main menu."
size_flags_horizontal = 0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 12 )

[node name="Right" type="VBoxContainer" parent="CenterContainer/Book/MarginContainer/Pages"]
margin_left = 336.0
margin_right = 620.0
margin_bottom = 490.0
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="ChooseMapTitle" type="Label" parent="CenterContainer/Book/MarginContainer/Pages/Right"]
margin_right = 284.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.180392, 0.141176, 0.0784314, 1 )
custom_colors/font_color_shadow = Color( 0.901961, 0.901961, 0.901961, 1 )
custom_constants/shadow_offset_x = -2
custom_constants/shadow_offset_y = -1
text = "Choose map to play:"

[node name="MapList" type="HBoxContainer" parent="CenterContainer/Book/MarginContainer/Pages/Right"]
margin_top = 25.0
margin_right = 284.0
margin_bottom = 180.0
rect_min_size = Vector2( 0, 155 )
size_flags_vertical = 3

[node name="TextureRect" type="ColorRect" parent="CenterContainer/Book/MarginContainer/Pages/Right/MapList"]
show_behind_parent = true
margin_right = 284.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )
size_flags_horizontal = 3
size_flags_vertical = 2
color = Color( 1, 1, 1, 0.22651 )

[node name="ItemList" type="ItemList" parent="CenterContainer/Book/MarginContainer/Pages/Right/MapList/TextureRect"]
margin_right = 285.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/bg = SubResource( 9 )
custom_fonts/font = ExtResource( 7 )
custom_colors/guide_color = Color( 0, 0, 0, 0 )
custom_colors/font_color_selected = Color( 0.258824, 0.188235, 0.0509804, 1 )
custom_colors/font_color = Color( 0.258824, 0.188235, 0.0509804, 1 )
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RecommendedNumberOfPlayers" type="HBoxContainer" parent="CenterContainer/Book/MarginContainer/Pages/Right"]
margin_top = 184.0
margin_right = 284.0
margin_bottom = 203.0

[node name="Label" type="Label" parent="CenterContainer/Book/MarginContainer/Pages/Right/RecommendedNumberOfPlayers"]
margin_top = 1.0
margin_right = 255.0
margin_bottom = 18.0
rect_min_size = Vector2( 255, 0 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.258824, 0.188235, 0.0509804, 1 )
text = "Recommended number of players:"

[node name="NumberOfPlayers" type="Label" parent="CenterContainer/Book/MarginContainer/Pages/Right/RecommendedNumberOfPlayers"]
margin_left = 259.0
margin_right = 284.0
margin_bottom = 19.0
rect_min_size = Vector2( 25, 0 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 0.258824, 0.188235, 0.0509804, 0.501961 )
text = "1"
align = 1

[node name="MapPreview" type="TextureRect" parent="CenterContainer/Book/MarginContainer/Pages/Right"]
margin_top = 207.0
margin_right = 284.0
margin_bottom = 307.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 15 )
expand = true
stretch_mode = 5

[node name="GameSettingsTitle" type="Label" parent="CenterContainer/Book/MarginContainer/Pages/Right"]
margin_top = 311.0
margin_right = 284.0
margin_bottom = 332.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.180392, 0.141176, 0.0784314, 1 )
custom_colors/font_color_shadow = Color( 0.901961, 0.901961, 0.901961, 1 )
custom_constants/shadow_offset_x = -2
custom_constants/shadow_offset_y = -1
text = "Game Settings:"

[node name="ResourceDensity" type="HBoxContainer" parent="CenterContainer/Book/MarginContainer/Pages/Right"]
margin_top = 336.0
margin_right = 284.0
margin_bottom = 353.0
script = SubResource( 11 )

[node name="Label" type="Label" parent="CenterContainer/Book/MarginContainer/Pages/Right/ResourceDensity"]
margin_right = 101.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.258824, 0.188235, 0.0509804, 1 )
text = "Resource Density: "

[node name="ResourceDensityIndicator" type="Label" parent="CenterContainer/Book/MarginContainer/Pages/Right/ResourceDensity"]
margin_left = 105.0
margin_right = 135.0
margin_bottom = 17.0
rect_min_size = Vector2( 30, 0 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.258824, 0.188235, 0.0509804, 1 )
text = "1.0x"

[node name="ResourceDensitySlider" type="HSlider" parent="CenterContainer/Book/MarginContainer/Pages/Right/ResourceDensity"]
margin_left = 139.0
margin_right = 259.0
margin_bottom = 16.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 2
min_value = 0.5
max_value = 2.0
step = 0.5
value = 1.0
ticks_on_borders = true

[node name="AdditionalOccurences" type="HBoxContainer" parent="CenterContainer/Book/MarginContainer/Pages/Right"]
margin_top = 357.0
margin_right = 284.0
margin_bottom = 382.0
size_flags_vertical = 2
script = SubResource( 12 )

[node name="Traders" type="CheckBox" parent="CenterContainer/Book/MarginContainer/Pages/Right/AdditionalOccurences"]
margin_right = 98.0
margin_bottom = 25.0
custom_styles/focus = SubResource( 3 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_disabled = Color( 0.258824, 0.188235, 0.0509804, 0.501961 )
custom_colors/font_color = Color( 0.258824, 0.188235, 0.0509804, 1 )
text = "Free Traders"

[node name="Pirates" type="CheckBox" parent="CenterContainer/Book/MarginContainer/Pages/Right/AdditionalOccurences"]
margin_left = 102.0
margin_right = 168.0
margin_bottom = 25.0
custom_styles/focus = SubResource( 3 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_disabled = Color( 0.258824, 0.188235, 0.0509804, 0.501961 )
custom_colors/font_color = Color( 0.258824, 0.188235, 0.0509804, 1 )
text = "Pirates"

[node name="Disasters" type="CheckBox" parent="CenterContainer/Book/MarginContainer/Pages/Right/AdditionalOccurences"]
margin_left = 172.0
margin_right = 250.0
margin_bottom = 25.0
custom_styles/focus = SubResource( 3 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_disabled = Color( 0.258824, 0.188235, 0.0509804, 0.501961 )
custom_colors/font_color = Color( 0.258824, 0.188235, 0.0509804, 1 )
text = "Disasters"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/Book/MarginContainer/Pages/Right"]
margin_top = 450.0
margin_right = 284.0
margin_bottom = 490.0
alignment = 2

[node name="StartGameButton" type="TextureButton" parent="CenterContainer/Book/MarginContainer/Pages/Right/HBoxContainer"]
margin_left = 250.0
margin_right = 284.0
margin_bottom = 40.0
hint_tooltip = "Start the game."
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 17 )
[connection signal="focus_exited" from="CenterContainer/Book/MarginContainer/Pages/Left/NameSelection/PlayerName" to="CenterContainer/Book/MarginContainer/Pages/Left/NameSelection/PlayerName" method="_on_PlayerName_focus_exited"]
[connection signal="value_changed" from="CenterContainer/Book/MarginContainer/Pages/Left/AIPlayerSelection/VBoxContainer/HBoxContainer/AISlider" to="CenterContainer/Book/MarginContainer/Pages/Left/AIPlayerSelection/VBoxContainer/HBoxContainer/AISlider" method="_on_AISlider_value_changed"]
[connection signal="pressed" from="CenterContainer/Book/MarginContainer/Pages/Left/BackToMenuButton" to="." method="_on_BackToMenuButton_pressed"]
[connection signal="item_selected" from="CenterContainer/Book/MarginContainer/Pages/Right/MapList/TextureRect/ItemList" to="CenterContainer/Book/MarginContainer/Pages/Right/MapList/TextureRect/ItemList" method="_on_ItemList_item_selected"]
[connection signal="value_changed" from="CenterContainer/Book/MarginContainer/Pages/Right/ResourceDensity/ResourceDensitySlider" to="CenterContainer/Book/MarginContainer/Pages/Right/ResourceDensity" method="_on_ResourceDensitySlider_value_changed"]
[connection signal="pressed" from="CenterContainer/Book/MarginContainer/Pages/Right/AdditionalOccurences/Traders" to="CenterContainer/Book/MarginContainer/Pages/Right/AdditionalOccurences" method="_on_Traders_pressed"]
[connection signal="pressed" from="CenterContainer/Book/MarginContainer/Pages/Right/AdditionalOccurences/Pirates" to="CenterContainer/Book/MarginContainer/Pages/Right/AdditionalOccurences" method="_on_Pirates_pressed"]
[connection signal="pressed" from="CenterContainer/Book/MarginContainer/Pages/Right/AdditionalOccurences/Disasters" to="CenterContainer/Book/MarginContainer/Pages/Right/AdditionalOccurences" method="_on_Disasters_pressed"]
[connection signal="pressed" from="CenterContainer/Book/MarginContainer/Pages/Right/HBoxContainer/StartGameButton" to="." method="_on_StartGameButton_pressed"]
